fix: margin-bottom issues of eco-wrap and discount-wrap

--- a/assets/style/component/_discount.scss
+++ b/assets/style/component/_discount.scss
@@ -31,6 +31,7 @@
 
 @media(max-width: 768px) {
     .discount-full-width-wrap {
+        margin-bottom: 0;
         padding: 12px 0 16px 0;
     }
 
