--- a/assets/style/component/_eco.scss
+++ b/assets/style/component/_eco.scss
@@ -22,6 +22,7 @@
         flex-direction: column;
         padding-top: 40px;
         padding-bottom: 40px;
+        margin-bottom: 0;
 
         .eco-keep-ratio-wrap {
             width: 100%;
